--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <i class="fas fa-bars text-white"></i>
             </a>
             <a href="#home" class="logo">
-                <img src="logowhite.png" alt="">
+                <img src="./assets/logowhite.png" alt="">
             </a>
         </nav>
         <div class="sidebar_container" id="side">
@@ -58,7 +58,7 @@
     </div>
     <section class="top sections" id="top">
         <div class="vidcover">
-            <video autoplay muted loop playsinline controls="true" class="vid1" src="vid1.mp4"></video>
+            <video autoplay muted loop playsinline controls="true" class="vid1" src="./assets/vid1.mp4"></video>
             <!-- video source - intechnic.com -->
         </div>
         <div class="container">
@@ -81,7 +81,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-11 welcometext mt-5 pt-4">
                     <h1 class="h1text strategytext">Strategy</h1>
-                    <video autoplay muted loop playsinline controls="true" class="vids" src="vid2.mp4"></video> 
+                    <video autoplay muted loop playsinline controls="true" class="vids" src="./assets/vid2.mp4"></video> 
                                 <!-- video source - intechnic.com --> 
                 </div>
             </div>    
@@ -124,7 +124,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-11 welcometext mt-5 pt-4">
                     <h1 class="h1text">UX Design</h1>
-                    <video autoplay muted loop playsinline controls="true" class="vids" src="vid3.mp4"></video>  
+                    <video autoplay muted loop playsinline controls="true" class="vids" src="./assets/vid3.mp4"></video>  
                                 <!-- video source - intechnic.com -->           
                 </div>
             </div>
@@ -156,7 +156,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-11 welcometext mt-5 pt-4">
                     <h1 class="h1text">Web Design</h1>
-                    <video autoplay muted loop playsinline controls="true" class="vids" src="vid4.mp4"></video>  
+                    <video autoplay muted loop playsinline controls="true" class="vids" src="./assets/vid4.mp4"></video>  
                                 <!-- video source - intechnic.com -->           
                 </div>
             </div>
@@ -179,9 +179,6 @@
                     <p class="mb-5 mt-5">
                         We have the business acumen, creativity, and experience to solve any problem and deliver results.
                     </p>
-                    <!-- <p>
-                        <i class="fas fa-share-square"></i><span>Start getting<br>Website results</span>
-                    </p> -->
                 </div>
                 <div class="col-lg-4 col-10 d-none d-lg-block webblock">
                     <ul class="listitems">
@@ -202,7 +199,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-11 welcometext mt-5 pt-4">
                     <h1 class="h1text">Marketing</h1>
-                    <video autoplay muted loop playsinline controls="true" class="vids" src="vid5.mp4"></video>  
+                    <video autoplay muted loop playsinline controls="true" class="vids" src="./assets/vid5.mp4"></video>  
                                 <!-- video source - intechnic.com -->           
                 </div>
             </div>
@@ -244,7 +241,7 @@
                 <div class="col-md-8">
                     <div class="contain">
                         <div class="image">
-                            <img src="p1.jpg" class="img-fluid" alt="">
+                            <img src="./assets/p1.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="text">
                             <div class="uppertext">
@@ -260,7 +257,7 @@
                         <div class="col-md-6"> 
                             <div class="contain">
                                 <div class="image">
-                                    <img src="p8.jpg" class="img-fluid" alt="">
+                                    <img src="./assets/p8.jpg" class="img-fluid" alt="">
                                 </div>
                                 <div class="text">
                                     <div class="uppertext">
@@ -276,7 +273,7 @@
                         <div class="col-md-6">
                             <div class="contain">
                                 <div class="image">
-                                    <img src="p4.jpg" class="img-fluid" alt="">
+                                    <img src="./assets/p4.jpg" class="img-fluid" alt="">
                                 </div>
                                 <div class="text">
                                     <div class="uppertext">
@@ -292,7 +289,7 @@
                                 <div class="col-md-12"> 
                                     <div class="contain">                                  
                                         <div class="image">
-                                            <img src="p2.jpg" class="img-fluid" alt="">
+                                            <img src="./assets/p2.jpg" class="img-fluid" alt="">
                                         </div>
                                         <div class="text">
                                             <div class="uppertext">
@@ -312,7 +309,7 @@
                 <div class="col-md-4"> 
                     <div class="contain">
                         <div class="image">
-                            <img src="p3.jpg" class="img-fluid" alt="">
+                            <img src="./assets/p3.jpg" class="img-fluid" alt="">
                         </div>
                         <div class="text">
                             <div class="uppertext">
@@ -328,7 +325,7 @@
                         <div class="col-md-12">
                             <div class="contain">
                                 <div class="image">
-                                    <img src="p7.jpg" class="img-fluid" alt="">
+                                    <img src="./assets/p7.jpg" class="img-fluid" alt="">
                                 </div>
                                 <div class="text">
                                     <div class="uppertext">
@@ -455,7 +452,7 @@
                     <div class="row justify-content-center mb-5">
                         <div class="col-6">
                             <div class="aboutcontainers">
-                                <img src="ap6.jpg" alt="">
+                                <img src="./assets/ap6.jpg" alt="">
                                 <div class="overlay">
                                     <span class="name">Dennis Ritchie</span>
                                 </div>
@@ -463,7 +460,7 @@
                         </div>
                         <div class="col-6">
                             <div class="aboutcontainers">
-                                <img src="ap5.jpg"  alt="">
+                                <img src="./assets/ap5.jpg"  alt="">
                                 <div class="overlay">
                                     <span class="name">Brendan Eich</span>
                                 </div>
@@ -473,7 +470,7 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="aboutcontainers">
-                                <img src="ap2.jpg"  alt="">
+                                <img src="./assets/ap2.jpg"  alt="">
                                 <div class="overlay">
                                     <span class="name">Larry Page</span>
                                 </div>
@@ -481,7 +478,7 @@
                         </div>
                         <div class="col-6">
                             <div class="aboutcontainers">
-                                <img src="ap4.jpg"  alt="">
+                                <img src="./assets/ap4.jpg"  alt="">
                                 <div class="overlay">
                                     <span class="name">Satoshi Nakamoto</span>
                                 </div>
@@ -548,7 +545,7 @@
                     <div class="row justify-content-center mb-5 aboutpics">
                         <div class="col-sm-6 col-12">
                             <div class="aboutcontainers">
-                                <img src="ap6.jpg"  class=" img-fluid"  alt="">
+                                <img src="./assets/ap6.jpg"  class=" img-fluid"  alt="">
                                 <div class="overlay">
                                     <span class="name">Dennis Ritchie</span>
                                 </div>
@@ -556,7 +553,7 @@
                         </div>
                         <div class="col-sm-6 col-12">
                             <div class="aboutcontainers">
-                                <img src="ap5.jpg" class=" img-fluid" alt="">
+                                <img src="./assets/ap5.jpg" class=" img-fluid" alt="">
                                 <div class="overlay">
                                     <span class="name">Brendan Eich</span>
                                 </div>
@@ -566,7 +563,7 @@
                     <div class="row aboutpics">
                         <div class="col-sm-6 col-12">
                             <div class="aboutcontainers">
-                                <img src="ap2.jpg" class=" img-fluid"  alt="">
+                                <img src="./assets/ap2.jpg" class=" img-fluid"  alt="">
                                 <div class="overlay">
                                     <span class="name">Larry Page</span>
                                 </div>
@@ -574,7 +571,7 @@
                         </div>
                         <div class="col-sm-6 col-12">
                             <div class="aboutcontainers">
-                                <img src="ap4.jpg" class=" img-fluid" alt="">
+                                <img src="./assets/ap4.jpg" class=" img-fluid" alt="">
                                 <div class="overlay">
                                     <span class="name">Satoshi Nakamoto</span>
                                 </div>
